--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -60,12 +60,28 @@
     }
 }
 
+@include media-breakpoint-up(lg) {
+    .portfolio-modal {
+        .modal-dialog {
+            margin: 1rem;
+            max-width: 50vw;
+            position: absolute;
+            left: 25%;
+        }
+
+        .modal-content {
+            h2 {
+                font-size: 3rem;
+                line-height: 3rem;
+            }
+        }
+    }
+}
+
 .portfolio-modal {
     .modal-dialog {
         margin: 1rem;
-        max-width: 50vw;
-        position: absolute;
-        left: 25%;
+        max-width: 100vw;
     }
 
     .modal-content {
@@ -74,8 +90,8 @@
         text-align: center;
 
         h2 {
-            font-size: 3rem;
-            line-height: 3rem;
+            font-size: 2rem;
+            line-height: 2rem;
         }
 
         p.item-intro {
